add create, update and delete stacks with AWS library; add Cognito and Lambda custom handlers; add waitFor createComplete and updateComplete; add Stacks Outputs to Project Parameters;

--- a/templates/appsync-resolver-lambda/template.yml
+++ b/templates/appsync-resolver-lambda/template.yml
@@ -55,8 +55,8 @@ Resources:
                 Action:
                   - dynamodb:*
                 Resource:
-                  - Fn::Sub: arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ToDosTableName}
-                  - Fn::Sub: arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ToDosTableName}/*
+                  - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ToDosTableName}"
+                  - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ToDosTableName}/*"
 
   ####################################################################################
 
