--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^3.1.1",
-    "aws-sdk": "^2.552.0"
+    "aws-sdk": "^2.552.0",
+    "flat": "^4.1.0"
   }
 }
