--- a/templates/appsync-resolver-dynamodb/template.yml
+++ b/templates/appsync-resolver-dynamodb/template.yml
@@ -38,8 +38,8 @@ Resources:
                 Action:
                   - dynamodb:*
                 Resource:
-                  - Fn::Sub: arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
-                  - Fn::Sub: arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/*
+                  - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}"
+                  - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/*"
 
   ## Pipeline Function and Resolver to GetItem
 
