add support to replace project parameters into stack parameters at runtime; extract external stacks parameters from template and put them into stacks parameters file; update appsync, cognito and lambda demo templates with new outputs

--- a/templates/appsync/template.yml
+++ b/templates/appsync/template.yml
@@ -9,17 +9,25 @@ Resources:
       AuthenticationType: "AMAZON_COGNITO_USER_POOLS"
       UserPoolConfig:
         UserPoolId: "${userPoolId}"
-        AwsRegion: "${AwsRegion}"
+        AwsRegion: "${AWS::Region}"
         DefaultAction: "ALLOW"
 
   GraphQLSchema:
       Type: AWS::AppSync::GraphQLSchema
       Properties:
         ApiId: !GetAtt [GraphQLApi, ApiId]
-        Definition: "${file(./stacks/${stackName}/schema.graphql)}"
+        Definition: "${file(./stacks/${stackFolder}/schema.graphql)}"
 
 
 Outputs:
+  GraphQLApiId:
+    Description: GraphQLApi Id
+    Value: !GetAtt [ GraphQLApi, ApiId ]
+
+  GraphQLApiArn:
+    Description: GraphQLApi Arn
+    Value: !GetAtt [ GraphQLApi, Arn ]
+
   GraphQLApiUrl:
     Description: GraphQLApi URL
     Value: !GetAtt [ GraphQLApi, GraphQLUrl ]
